ros2_ws/log/build_2023-12-05_11-30-53/agrobot_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/tjacobs/ros2_ws/install/agrobot_pkg/lib/python3.10/site-packages/agrobot_pkg/simulation_controller_node.py", line 70
    self.logger.info("Available objects: " + str(self.detected_objects.keys())
                    ^
SyntaxError: '(' was never closed

